test/libsolidity/syntaxTests/pragma/experimental_pragma_without_experimental_mode.sol
pragma experimental __test;
// ----
// SyntaxError 2816: (0-27): Experimental pragmas can only be used if the experimental mode has been enabled.
// Warning 2264: (0-27): Experimental features are turned on. Do not use experimental features on live deployments.
